--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "webs-music",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "concurrently \"npm run start --prefix backend\" \"npm run dev --prefix frontend\""
+    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
   },
   "keywords": [],
   "author": "",
