--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.75.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@tailwindcss/vite": "^4.1.15",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
